# mkdocs-crd-viewer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
demo/: mkdocs.yml
demo/crds/: fabrics.eda.nokia.com.yaml  interfaces.eda.nokia.com.yaml
demo/docs/: index.md
memory/: MEMORY.md  feedback_use_uv.md
src/mkdocs_crd_plugin/: __init__.py  core.py  macros.py  plugin.py
src/mkdocs_crd_plugin/assets/: crd-viewer.css  crd-viewer.js
src/mkdocs_crd_viewer/: core.py  macros.py  plugin.py
src/mkdocs_crd_viewer/assets/: __init__.py  crd-viewer.css  crd-viewer.js
tests/: test_core.py  test_integration.py
